# earthmind_client_using_framework

./: Cargo.toml  README.md  justfile
src/: cli.rs  constants.rs  main.rs  tx_builder.rs
src/processors/: aggregator.rs  miner.rs  mod.rs  transaction_processor.rs  utils.rs  validator.rs
tests/: test_contract.rs
tests/common/: utils.rs
