[package]
name = "earthmind_listener_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
near-crypto = "0.23.0"
near-sdk = "5.6.0"
tokio = { version = "1.41.1", features = ["full"] }
near_event_listener = { git = "https://github.com/hasselalcala/near_event_listener" }
near-jsonrpc-client = "0.10.1"
near-jsonrpc-primitives = "0.23.0"
near-primitives = ">0.22,<0.24"
serde_json = "1.0.120"
async-trait = "0.1.81"