[package]
name = "earthmind_listener_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
near-crypto = "0.23.0"
near-sdk = "5.6.0"
tokio = { version = "1.41.1", features = ["full"] }
near_event_listener = { git = "https://github.com/hasselalcala/near_event_listener" }
near-jsonrpc-client = "0.10.1"
near-jsonrpc-primitives = "0.23.0"
near-primitives = ">0.22,<0.24"
serde_json = "1.0.120"
async-trait = "0.1.81"
near_tx_qx_builder = { git = "https://github.com/hasselalcala/near_tx_qx_builder" }
dotenv = "0.15.0"

[dev-dependencies]
near-sdk = { version = "5.2.1", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
anyhow = "1.0"
hex = { version = "0.4", default-features = false }